compile_tests/expected/constant.stderr
error[E0308]: mismatched types
  --> src/constant.rs:8:9
   |
8  |         CONSTANT = 20;
   |         ^^^^^^^^
   |         |
   |         expected `&mut Gpu<i32, Mut>`, found `&mut Gpu<i32, Const>`
   |         arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut Gpu<_, Mut>`
              found mutable reference `&mut Gpu<_, Const>`
note: method defined here
  --> ./crates/ragna/src/values.rs:80:12
   |
80 |     pub fn assign(&mut self, ctx: &mut GpuContext, value: Gpu<T, impl Any>) {
   |            ^^^^^^
